# betterls

./: LICENSE  README.md  pyproject.toml
betterls/: filenames.json  ls.py
