[tool.poetry]
name = "betterls"
version = "1.1.0"
description = "Better ls command."
authors = ["Cyrus Yip <cyruscmyip1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bls = 'betterls.ls:bls'
