[tool.poetry]
name = "betterls"
version = "1.2.0"
description = "Better ls command."
authors = ["Cyrus Yip <cyruscmyip1@gmail.com>"]
license = "MIT"
readme = README.md
repository = "https://github.com/RealCyGuy/betterls"
keywords = ["ls", "cli", "windows"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bls = 'betterls.ls:bls'
